# parse-gb-xml

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
test_files/: sequences_3.gbx.xml
test_files/expected/: genomes_OUTPUT.fa  peptides_OUTPUT.faa
