[package]
name = "parse-gb-xml"
version = "0.1.0"
authors = ["Ryan Moore <moorer@udel.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
roxmltree = "0.13.0"
structopt = "0.3.17"
